# xrpl-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
memory-bank/: architecture.md  coding-rules.md  design-document.md  implementation-plan.md  progress.md  tech-stack.md
memory-bank/agents-team-roles/: architect.md  ask.md  debug.md  developer.md  devops.md  documentation-writer.md  integrator.md  optimizer.md  post-deployment-monitor.md  security-reviewer.md  specification-pseudocode.md  tdd.md
src/: server.py
src/xrpl_mcp_server/: __main__.py  server.py
